<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverlayAttackDefenceActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oad_intro"
            android:id="@+id/oadview"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/material_grey_600"
            android:gravity="fill_horizontal|fill_vertical"
            android:textAlignment="gravity" />

        <Button
            android:id="@+id/oadbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:filterTouchesWhenObscured="true"
            android:text="@string/oad_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oad_button2"
            android:id="@+id/oadbutton2"
            android:layout_below="@+id/oadbutton"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:onClick="vulnerable"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>