<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UseSetWebviewClientActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setwview_intro"
            android:id="@+id/setwviewView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/material_grey_600"
            android:gravity="fill_horizontal|fill_vertical"
            android:textAlignment="gravity" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/setwviewuri"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/wview_enter"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wview_view"
            android:id="@+id/setwviewbutton"
            android:layout_below="@+id/setwviewuri"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:onClick="get"/>

        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setwview"
            android:layout_below="@+id/setwviewbutton" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>