<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecureRandomSeedActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/randSeed_intro"
            android:id="@+id/randSeedView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/material_grey_600"
            android:gravity="fill_horizontal|fill_vertical"
            android:textAlignment="gravity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/showRandSeedView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/randomSeedBtn"
            android:id="@+id/randomSeedbutton"
            android:layout_below="@+id/showRandSeedView"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:onClick="getRandomNumber"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/securerandomSeedBtn"
            android:id="@+id/securerandomSeedbutton"
            android:layout_below="@+id/randomSeedbutton"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true"
            android:onClick="getSecureRandomNumber"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>